--- a/helm/myapp/templates/secrets.yml
+++ b/helm/myapp/templates/secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argo-secret
+  name: argocd-secret
   namespace: argocd
 data:
   github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
@@ -10,6 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: github-secret
+  namespace: default
 data:
   .dockerconfigjson: ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiZGl0dGFwZWVtIiwKICAgICAgInBhc3N3b3JkIjogImdocF9xOUw5THFJRFJsSmJ3bmhTRloxdjdNZnlaVng0dGYwRzNzQjMiLAogICAgICAiZW1haWwiOiAibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSIKICAgIH0KICB9Cn0=
 type: kubernetes.io/dockerconfigjson
