--- a/helm/myapp/templates/secrets.yml
+++ b/helm/myapp/templates/secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-secret
+  name: argo-secret
   namespace: argocd
 data:
   github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
