Test new secret

--- a/helm/myapp/templates/secrets.yml
+++ b/helm/myapp/templates/secrets.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: argo-secret
-  namespace: argocd
+  namespace: default
 data:
   github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
 
