--- a/helm/myapp/templates/secrets.yml
+++ b/helm/myapp/templates/secrets.yml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: argo-secret
-  namespace: default
+  namespace: argocd
 data:
   github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
+
+---
 
 apiVersion: v1
 kind: Secret
