--- a/helm/myapp/values.yaml
+++ b/helm/myapp/values.yaml
@@ -10,7 +10,7 @@ image:
   tag: latest
 
 imagePullSecrets: 
-  - name: github-packages
+  - name: github-package
   
 nameOverride: ""
 fullnameOverride: ""
