--- a/helm/nginx-webserver/templates/secrets.yml
+++ b/helm/nginx-webserver/templates/secrets.yml
@@ -11,6 +11,16 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
+  name: argo-secret
+  namespace: default
+data:
+  github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
   name: github-secret
   namespace: default
 data:
