--- a/helm/nginx-webserver/templates/secrets.yml
+++ b/helm/nginx-webserver/templates/secrets.yml
@@ -21,7 +21,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: github-secret
+  name: github-packages
   namespace: default
 data:
   .dockerconfigjson: ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiZGl0dGFwZWVtIiwKICAgICAgInBhc3N3b3JkIjogImdocF9xOUw5THFJRFJsSmJ3bmhTRloxdjdNZnlaVng0dGYwRzNzQjMiLAogICAgICAiZW1haWwiOiAibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSIKICAgIH0KICB9Cn0=
