--- a/helm/nginx-webserver/templates/deployment.yaml
+++ b/helm/nginx-webserver/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-webserver
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -13,7 +14,7 @@ spec:
         app: nginx-webserver
     spec:
       imagePullSecrets:
-        - name: github-secret
+        - name: argo-secret
       containers:
         - name: nginx
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
