--- a/helm/nginx-webserver/templates/secrets.yml
+++ b/helm/nginx-webserver/templates/secrets.yml
@@ -4,7 +4,7 @@ metadata:
   name: argo-secret
   namespace: argocd
 data:
-  github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
+  github-package: "ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz"
 
 ---
 
@@ -14,7 +14,7 @@ metadata:
   name: argo-secret
   namespace: default
 data:
-  github-package: ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz
+  github-package: "ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz"
 
 ---
 
@@ -24,6 +24,6 @@ metadata:
   name: github-packages
   namespace: default
 data:
-  .dockerconfigjson: ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiZGl0dGFwZWVtIiwKICAgICAgInBhc3N3b3JkIjogImdocF9xOUw5THFJRFJsSmJ3bmhTRloxdjdNZnlaVng0dGYwRzNzQjMiLAogICAgICAiZW1haWwiOiAibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSIKICAgIH0KICB9Cn0=
+  .dockerconfigjson: "ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiZGl0dGFwZWVtIiwKICAgICAgInBhc3N3b3JkIjogImdocF9xOUw5THFJRFJsSmJ3bmhTRloxdjdNZnlaVng0dGYwRzNzQjMiLAogICAgICAiZW1haWwiOiAibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSIKICAgIH0KICB9Cn0="
 type: kubernetes.io/dockerconfigjson
 
