--- a/helm/nginx-webserver/values.yaml
+++ b/helm/nginx-webserver/values.yaml
@@ -10,7 +10,7 @@ image:
   tag: latest
 
 imagePullSecrets: 
-  - name: argo-secret
+  - name: github-packages
   
 nameOverride: ""
 fullnameOverride: ""
