--- a/helm/nginx-webserver/templates/secrets.yaml
+++ b/helm/nginx-webserver/templates/secrets.yaml
@@ -21,7 +21,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: github-packages
+  name: github-secret
   namespace: default
 data:
   .dockerconfigjson: "ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiZGl0dGFwZWVtIiwKICAgICAgInBhc3N3b3JkIjogImdocF9xOUw5THFJRFJsSmJ3bmhTRloxdjdNZnlaVng0dGYwRzNzQjMiLAogICAgICAiZW1haWwiOiAibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSIKICAgIH0KICB9Cn0="
