--- a/helm/nginx-webserver/templates/secrets.yaml
+++ b/helm/nginx-webserver/templates/secrets.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: argo-secret
-  namespace: argocd
-data:
-  github-package: "ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz"
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: argo-secret
+#   namespace: argocd
+# data:
+#   github-package: "ZGl0dGhhcGVlbTpnaHBfcTlMOUxxSURRbEpid25oU0ZaMXY3TWZ5WlZ4NHRmMEczc0Iz"
 
----
+# ---
 
 apiVersion: v1
 kind: Secret
@@ -23,6 +23,18 @@ kind: Secret
 metadata:
   name: github-secret
   namespace: default
+data:
+  .dockerconfigjson: "eyJhdXRocyI6eyJnaGNyLmlvIjp7InVzZXJuYW1lIjoiZGl0dGhhcGVlbSIsInBhc3N3b3JkIjoiZ2hwX3E5TDlMcUlEUWxKYnduaFNGWjF2N01meVpWeDR0ZjBHM3NCMyIsImVtYWlsIjoibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSJ9fX0="
+type: kubernetes.io/dockerconfigjson
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: argo-secret
+  namespace: argocd
+type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: "eyJhdXRocyI6eyJnaGNyLmlvIjp7InVzZXJuYW1lIjoiZGl0dGhhcGVlbSIsInBhc3N3b3JkIjoiZ2hwX3E5TDlMcUlEUWxKYnduaFNGWjF2N01meVpWeDR0ZjBHM3NCMyIsImVtYWlsIjoibGFrYWd1bC5wZWVtQGdtYWlsLmNvbSJ9fX0="
 type: kubernetes.io/dockerconfigjson
