--- a/helm/nginx-webserver/templates/deployment.yaml
+++ b/helm/nginx-webserver/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: nginx-webserver
     spec:
       imagePullSecrets:
-        - name: github-packages
+        - name: github-secret
       containers:
         - name: nginx
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
