--- a/helm/nginx-webserver/templates/deployment.yaml
+++ b/helm/nginx-webserver/templates/deployment.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-webserver
-  namespace: default
 spec:
+  serviceName: nginx-webserver
   replicas: 1
   selector:
     matchLabels:
