--- a/helm/nginx-webserver/values.yaml
+++ b/helm/nginx-webserver/values.yaml
@@ -1,3 +1,9 @@
+# Default values for myapp.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+replicaCount: 1
+
 image:
   repository: ghcr.io/ditthapeem/nginx-webserver
   pullPolicy: Always
@@ -5,3 +11,7 @@ image:
 
 imagePullSecrets: 
   - name: github-packages
+
+service:
+  type: ClusterIP
+  port: 80
