--- a/helm/nginx-webserver/templates/secrets.yaml
+++ b/helm/nginx-webserver/templates/secrets.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
 data:
   github-package: "aHVza3lpc2hlcmU6Z2hwX3FEbmhjUTFHaldIZU9ncmhKWnJUNnpCWmtnN2NmODJwUTZNMQ=="
+  .dockerconfigjson: "ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiSHVza3lJc0hlcmUiLAogICAgICAicGFzc3dvcmQiOiAiZ2hwX3FEbmhjUTFHaldIZU9ncmhKWnJUNnpCWmtnN2NmODJwUTZNMSIsCiAgICAgICJlbWFpbCI6ICJsYWthZ3VsLnBlZW1AZ21haWwuY29tIgogICAgfQogIH0KfQ=="
 
 ---
 
